<resources>
    <string name="app_name">Sasa_Doc</string>
    <string name="email_address">Email Address.</string>
    <string name="password">Password.</string>
    <string name="login">Login</string>
    <string name="name">Name</string>
    <string name="phone_number">Phone number.</string>
    <string name="email">Email.</string>
    <string name="register">REGISTER.</string>
    <string name="profile">Profile.</string>
    <string name="not_having_an_account_yet">Not having an account yet?</string>
    <string name="register_button">Register.</string>
    <string name="forgot_password">Forgot password?</string>
</resources>